--- a/.github/workflows/Content_gap_agent_aspose.yml
+++ b/.github/workflows/Content_gap_agent_aspose.yml
@@ -65,6 +65,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          persist-credentials: true
 
       - name: Verify PAT can access required GitHub repos
         env:
@@ -92,7 +95,6 @@ jobs:
             fi
           }
 
-          # Add any repos your pipeline will clone
           check_repo_api "Aspose/aspose-blog"
           check_repo_api "aspose-cells/Aspose.Cells-Doc-md"
           check_repo_api "aspose-cells/Aspose.Cells-API-References"
@@ -102,27 +104,37 @@ jobs:
           echo "2) Checking via git (GIT_ASKPASS, token never in URL)..."
           cat > /tmp/git-askpass.sh <<'EOF'
           #!/usr/bin/env bash
-          # Git calls askpass for both username and password prompts.
           case "$1" in
             *Username*) echo "x-access-token" ;;
             *Password*) echo "${ASPOSE_BLOG_TOKEN}" ;;
             *) echo "${ASPOSE_BLOG_TOKEN}" ;;
           esac
           EOF
-              chmod +x /tmp/git-askpass.sh
+          chmod +x /tmp/git-askpass.sh
 
-              export GIT_ASKPASS=/tmp/git-askpass.sh
-              export GIT_TERMINAL_PROMPT=0
+          export GIT_ASKPASS=/tmp/git-askpass.sh
+          export GIT_TERMINAL_PROMPT=0
 
-              # This validates Git protocol auth without cloning a full repo.
-              git ls-remote https://github.com/Aspose/aspose-blog.git HEAD >/dev/null
-              git ls-remote https://github.com/aspose-cells/Aspose.Cells-Doc-md.git HEAD >/dev/null
+          git ls-remote https://github.com/Aspose/aspose-blog.git HEAD >/dev/null
+          git ls-remote https://github.com/aspose-cells/Aspose.Cells-Doc-md.git HEAD >/dev/null
 
-              echo "PAT authentication checks passed."
+          echo "PAT authentication checks passed."
 
-
-      - name: Show git url rewrite rules (safe)
+      - name: Configure Git URL rewrite for private clones (scoped)
+        env:
+          ASPOSE_BLOG_TOKEN: ${{ secrets.ASPOSE_BLOG_TOKEN }}
         run: |
+          set -euo pipefail
+          if [ -z "${ASPOSE_BLOG_TOKEN:-}" ]; then
+            echo "ASPOSE_BLOG_TOKEN is empty or not available."
+            exit 1
+          fi
+
+          # Rewrite ONLY the orgs you need (avoids interfering with pushing to current repo)
+          git config --global url."https://x-access-token:${ASPOSE_BLOG_TOKEN}@github.com/Aspose/".insteadOf "https://github.com/Aspose/"
+          git config --global url."https://x-access-token:${ASPOSE_BLOG_TOKEN}@github.com/aspose-cells/".insteadOf "https://github.com/aspose-cells/"
+
+          # Safe debug output (does not print token)
           git config --global --get-regexp '^url\..*\.insteadOf$' || true
 
       - name: Set up Python
@@ -139,6 +151,7 @@ jobs:
         working-directory: ${{ github.workspace }}
         env:
           GIT_TERMINAL_PROMPT: "0"
+          BTA_CONFIG_DIR: ${{ github.workspace }}/config
           PROFESSIONALIZE_API_KEY: ${{ secrets.PROFESSIONALIZE_API_KEY }}
           PROFESSIONALIZE_BASE_URL: ${{ secrets.PROFESSIONALIZE_BASE_URL }}
           PROFESSIONALIZE_LLM_MODEL: ${{ secrets.PROFESSIONALIZE_LLM_MODEL }}
@@ -172,20 +185,17 @@ jobs:
           python -m agent_engine.content_gap_agent $ARGS
 
       - name: Commit and push outputs
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -euo pipefail
 
-          # Configure identity for the commit
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          # Make sure we are on the branch that triggered the workflow
-          git checkout "${GITHUB_REF_NAME}"
-
-          # Stage only what you want committed
+          # Stage only outputs
           git add outputs/ || true
 
-          # Commit only if there are changes
           if git diff --cached --quiet; then
             echo "No changes to commit."
             exit 0
@@ -193,6 +203,16 @@ jobs:
 
           git commit -m "Update content gap outputs (${GITHUB_RUN_ID})"
 
-          # Rebase to reduce push failures if multiple runs happen
+          # Ensure push uses the workflow token (robust even with url.rewrite present)
+          git remote set-url origin "https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
+
           git pull --rebase origin "${GITHUB_REF_NAME}"
           git push origin "HEAD:${GITHUB_REF_NAME}"
+
+      - name: Upload analysis results
+        uses: actions/upload-artifact@v4
+        with:
+          name: aspose-${{ github.event.inputs.product }}-${{ github.event.inputs.platform }}-results
+          path: |
+            outputs/
+          retention-days: 30
