--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,9 @@ pyyaml
 gitpython>=3.1.40
 requests>=2.28.0
 
+# CLI + logging UX
+typer>=0.12.3
+rich>=13.7.1
+
+# Embedding utilities
+numpy>=1.26.0
