--- a/.github/workflows/content_indexing_agent.yml
+++ b/.github/workflows/content_indexing_agent.yml
@@ -5,16 +5,46 @@ on:
   workflow_dispatch:
     inputs:
       brand_yaml:
-        description: "Path to brand YAML (repo-relative), e.g. configs/blogs.yaml"
+        description: "Path to brand YAML (repo-relative), e.g. configs/aspose.yaml"
         required: true
-        default: "configs/blogs.yaml"
-        type: string
+        default: "configs/aspose.yaml"
+        type: choice
+        options:
+          - configs/blogs.yaml
+          - configs/groupdocs.yaml
+          - configs/conholdate.yaml
 
       product_yaml:
         description: "Path to product YAML (repo-relative), e.g. configs/products/cells.yaml"
         required: true
         default: "configs/products/cells.yaml"
-        type: string
+        type: choice
+        options:
+          - configs/products/cells.yaml
+          - configs/products/words.yaml
+          - configs/products/pdf.yaml
+          - configs/products/slides.yaml
+          - configs/products/imaging.yaml
+          - configs/products/barcode.yaml
+          - configs/products/email.yaml
+          - configs/products/tasks.yaml
+          - configs/products/cad.yaml
+          - configs/products/diagram.yaml
+          - configs/products/note.yaml
+          - configs/products/3d.yaml
+          - configs/products/html.yaml
+          - configs/products/zip.yaml
+          - configs/products/ocr.yaml
+          - configs/products/omr.yaml
+          - configs/products/svg.yaml
+          - configs/products/gis.yaml
+          - configs/products/tex.yaml
+          - configs/products/page.yaml
+          - configs/products/font.yaml
+          - configs/products/psd.yaml
+          - configs/products/pub.yaml
+          - configs/products/drawing.yaml
+          - configs/products/finance.yaml
 
       platform:
         description: "Target platform (1 platform per run)"
@@ -34,8 +64,13 @@ on:
       steps:
         description: "CSV repo keys to index (matches your CLI --steps), e.g. blog,docs,tutorials,api"
         required: true
-        default: "blog,docs,tutorials,api"
-        type: string
+        default: "blog"
+        type: choice
+        options:
+          - blog
+          - docs
+          - tutorials
+          - api
 
       delete_missing:
         description: "If true, remove entries that no longer exist in source repos"
